fix large screen overflow issue

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -550,6 +550,7 @@ $lookbookItemWidth: calc(100% / 6);
 }
 
 .profile-info {
+  background: rgb(25,25,25);
   width: 400px;
   height: 100vh;
   overflow: hidden;
@@ -571,7 +572,7 @@ $lookbookItemWidth: calc(100% / 6);
 }
 
 .profile-stats {
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(25, 25, 25, 0.6);
   height: 300px;
   width: 400px;
   position: fixed;
@@ -588,7 +589,6 @@ $lookbookItemWidth: calc(100% / 6);
   h1 {
     font-size: 40px;
     margin: 0;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.25);
     padding-bottom: 20px;
   }
   h3 {
@@ -1053,7 +1053,6 @@ $lookbookItemWidth: calc(100% / 6);
       top: 15.85em;
       left: 0em;
       padding: 1em .5em;
-      background: rgba(0, 0, 0, 0.6);
       height: 300px;
       width: 100%;
       position: absolute;
